--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Build font
-        run: ttf::pataha
+        run: avivace/iosevka-build ttf::pataha
       
       - name: Test
         run: ls -la ./dist
