--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,8 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Build font
-        run: /run.sh ttf::pataha
+        with:
+          args: ttf::pataha
       
       - name: Test
         run: ls -la ./dist
