--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-20.04
-    container: avivace/iosevka-build
+    # container: avivace/iosevka-build
     
     env:
       FONT_VERSION: 0.1
@@ -21,6 +21,7 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Build font
+        uses: avivace/iosevka-build
         with:
           args: ttf::pataha
       
