--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 defaults:
   run:
     shell: bash
-    
+
 jobs:
   build:
     name: Build
@@ -29,7 +29,7 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Build font
-        run: /run ttf::pataha
+        run: /run.sh ttf::pataha
         # with:
         #   args: ttf::pataha
       
