--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       
+      - name: Chmod
+        run: chmod +x /run.sh
+
       - name: Build font
         run: /run.sh ttf::pataha
         # with:
