--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,8 @@ jobs:
     env:
       FONT_VERSION: 4.1.1
 
-    # outputs:
-    #   artifact-name: ${{ steps.set-artifact-name.outputs.artifact-name }}
+    outputs:
+      artifact-name: ${{ steps.set-artifact-name.outputs.artifact-name }}
 
     steps:
       - name: Checkout
@@ -31,20 +31,34 @@ jobs:
       - name: Chmod
         run: chmod +x /run.sh
 
+      - name: Cache build source
+        uses: actions/cache@v2
+        with:
+          path: /tmp/build/Iosevka${{ env.FONT_VERSION }}
+          key: font-cache-${{ env.FONT_VERSION }}
+          restore-keys: font-cache-
+
       - name: Build font
         run: /run.sh ttf::pataha
-        # with:
-        #   args: ttf::pataha
       
-      - name: Test
-        run: |
-          ls -la
-          ls -la /build
+      - uses: actions/upload-artifact@v2
+        with:
+          name: font-binary
+          path: ./dist
+      
+      - id: set-artifact-name
+        run: echo "::set-output name=artifact-name::font-binary"
+  
+  release:
+    name: Release
+    needs: build
+    runs-on: ubuntu-20.04
 
-      # - uses: actions/upload-artifact@v2
-      #   with:
-      #     name: ${{ matrix.workspace }}-${{ matrix.esphome }}-${{ matrix.esphome_board }}
-      #     path: ${{ env.esphome_device_name }}/.pioenvs/${{ env.esphome_device_name }}/firmware.bin
-      
-      # - id: set-artifact-name
-      #   run: echo "::set-output name=artifact-name::${{ matrix.workspace }}-${{ matrix.esphome }}-${{ matrix.esphome_board }}"
+    steps: 
+      - uses: actions/download-artifact@v2
+        id: download
+        with:
+          name:  ${{ needs.build.outputs.artifact-name }}
+          path: ./
+      - name: Echo download path
+        run: echo ${{ steps.download.outputs.download-path }}
