--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,3 +62,5 @@ jobs:
           path: ./
       - name: Echo download path
         run: echo ${{ steps.download.outputs.download-path }}
+      - name: Test
+        run: ls -la ./dist
