--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,4 +63,4 @@ jobs:
       - name: Echo download path
         run: echo ${{ steps.download.outputs.download-path }}
       - name: Test
-        run: ls -la ./dist
+        run: ls -la
