--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
         run: cp ./private-build-plans.toml ./Iosevka-${{ env.FONT_VERSION }}/
 
       - name: Test
-        run: ls -la .
+        run: cd Iosevka* && ls -la .
 
       - name: Build font
         # run: cd Iosevka-${{ env.FONT_VERSION }} && npm run build -- ttf::pataha
