--- a/.github/actions/Iosevka/action.yml
+++ b/.github/actions/Iosevka/action.yml
@@ -12,7 +12,7 @@ inputs:
 runs:
   using: 'docker'
   image: 'Dockerfile'
-  # entrypoint: npx run build -- 
+  entrypoint: /bin/sh -c
   args:
     - cd $GITHUB_WORKSPACE && ls -la
     # - cd ${{ GITHUB_WORKSPACE }}/Iosevka* && npx run build -- ${{ inputs.type }}::${{ inputs.plan }}
