--- a/.github/actions/Iosevka/action.yml
+++ b/.github/actions/Iosevka/action.yml
@@ -12,7 +12,7 @@ inputs:
 runs:
   using: 'docker'
   image: 'Dockerfile'
-  entrypoint: /bin/sh -c
+  # entrypoint: /bin/sh -c
   args:
     - ls -la
     # - cd ${{ GITHUB_WORKSPACE }}/Iosevka* && npx run build -- ${{ inputs.type }}::${{ inputs.plan }}
