--- a/.github/actions/Iosevka/action.yml
+++ b/.github/actions/Iosevka/action.yml
@@ -12,5 +12,7 @@ inputs:
 runs:
   using: 'docker'
   image: 'Dockerfile'
+  entrypoint: sh -c
   args:
-    - npm run build -- ${{ inputs.type }}::${{ inputs.plan }}
+    - ls -la
+    # - npm run build -- ${{ inputs.type }}::${{ inputs.plan }}
