--- a/.github/actions/Iosevka/action.yml
+++ b/.github/actions/Iosevka/action.yml
@@ -12,6 +12,7 @@ inputs:
 runs:
   using: 'docker'
   image: 'Dockerfile'
+  entrypoint: "sh -c"
   args:
     - ls -la
     # - npm run build -- ${{ inputs.type }}::${{ inputs.plan }}
