--- a/.github/actions/Iosevka/action.yml
+++ b/.github/actions/Iosevka/action.yml
@@ -13,4 +13,4 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - npm run build -- ${{ inputs.type }}::${{ inputs.plan }}
+    - ${{ inputs.type }}::${{ inputs.plan }}
